# simc_support

./: .gitignore  .style.yapf  README.md  README.txt  publish_release.ps1  publish_release.sh  pyproject.toml  requirements-dev.txt  requirements.txt  self_update.py  setup.cfg  setup.py  simc_checks.py  trinket_export.py  trinkets.py  wow_lib.py
.github/workflows/: CD.yml  CI.yml  python-package.yml
simc_support/: __init__.py  azerite-essence-power-spell-map.json  azerite-power-sets.json  azerite_item_extractor.py  azerite_item_translations.json  azerite_trait_extractor.py  azerite_trait_list.json  azerite_trait_map.json  azerite_trait_translations.json  self_update.py  simc_checks.py  talent_list.json  talent_list_ptr.json  trait_list.json  trait_map.json  traits_extractor.py  trinket_export.py  trinket_translations.json  wow_lib.py
simc_support/data_files/: trinkets.json
simc_support/game_data/: AzeriteEssence.py  AzeriteItem.py  Conduit.py  Corruption.py  Covenant.py  DamnationShard.py  DominationShard.py  Expansion.py  Faction.py  Instance.py  ItemLevel.py  Language.py  Legendary.py  Race.py  RaidRole.py  Role.py  Season.py  SimcObject.py  SoulBind.py  Source.py  Stat.py  Talent.py  Trinket.py  WowClass.py  WowSpec.py  new_talent.py  new_talent_slim.py
simc_support/simc_data/: FightStyle.py  Tier.py
simc_support/update/: extractor.py  talents.py  trinkets.py  utils.py
tests/game_data/: conduits_shaman.txt  test_Conduit.py  test_Covenant.py  test_Covenants.py  test_DamnationShard.py  test_DominationShard.py  test_Legendary.py  test_SoulBind.py  (+2 more)
(+52 files in other folders)
