[metadata]
name = simc_support
author = Bloodmallet(EU)
author_email = bloodmalleteu@gmail.com
description = Data to support simulations for World of Warcraft with SimulationCraft.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bloodmallet/simc_support
project_urls =
    Bug Tracker = https://github.com/Bloodmallet/simc_support/issues
license = GNU GENERAL PUBLIC LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
python_requires = >=3.7

[options.packages.find]
where =
exclude =
    test*

[options.package_data]
simc_support = 
    game_data/data_files/*.json
    py.typed
